# tavernbench-client

./: .gitignore  Makefile  PROTOCOL.md  README.md  debug_entities.py  debug_quest.py  debug_session.py  debug_tick.py  install.sh  test_hermes.py
.github/workflows/: test.yml
cli/: go.mod  pyproject.toml
cli/cmd/tavernbench/: act.go  attach.go  auth.go  cli_test.go  doctor.go  leaderboard.go  main.go  observe.go  play.go  scenarios.go
cli/internal/httpapi/: httpapi.go
cli/internal/sockconn/: sockconn.go  sockconn_test.go
cli/tavernbench/: __init__.py  config.py  install_cmd.py  main.py
cli/tavernbench_cli/: __init__.py  commands.py  config.py  doctor_cmd.py  install_cmd.py  main.py
cli/tests/: test_auth_cmd.py  test_config.py  test_doctor_cmd.py  test_install_cmd.py
docs/: protocol.md
docs/plans/: 2026-05-25-tui-agent-ipc.md
docs/specs/: 2026-05-23-user-journey-design.md  2026-05-25-tui-agent-ipc-design.md
e2e/: smoke.sh
mcp/: __init__.py  server.py
sdk/: README.md  example.py  pyproject.toml
sdk/tavernbench/: __init__.py  prompts.py  session.py  tools.py  websocket.py
tests/: conftest.py  test_auth.py  test_doctor.py  test_mcp_server.py
tui/: README.md  go.mod  handler.go  handler_test.go  main.go
tui/internal/agentproc/: agentproc.go  agentproc_test.go
tui/internal/config/: config.go  config_test.go
tui/internal/ipc/: protocol.go  protocol_test.go  server.go  server_test.go
tui/internal/render/: render.go  render_test.go
tui/internal/state/: reducer.go  reducer_test.go  types.go
tui/play/: go.mod  main.go
(+2 files in other folders)
