[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tavernbench"
version = "0.1.0"
description = "TavernBench CLI — benchmark your AI agent in a text RPG arena"
requires-python = ">=3.9"
dependencies = ["typer>=0.9", "mcp>=1.0"]

[project.scripts]
tavernbench = "tavernbench_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tavernbench_cli*"]
